--- a/main.css
+++ b/main.css
@@ -161,7 +161,7 @@ li {
 main {
     margin: 0;
     padding: 2rem;
-    padding-right: 3rem;
+    padding-right: 4rem;
     background-color: #7f7f7f1f;
   }
 
@@ -187,7 +187,7 @@ article {
   color: #326600;
   margin: 0px;
   padding: 1rem;
-  padding-right: 8rem;
+  padding-right: 5px;
   left: 0px;
   overflow: hidden;
 }
