--- a/main.css
+++ b/main.css
@@ -81,15 +81,6 @@ li {
     display: none;
   }
 
-  .bar {
-    display: block;
-    width: 30px;
-    height: 5px;
-    margin: 5px auto;
-    -webkit-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
-    background-color: #998100;
-}
   .nav-menu {
     display: flex;
     justify-content: space-between;
@@ -101,6 +92,7 @@ li {
 }
   
 .nav-link {
+    font-size: medium;
     display: block;
     text-align: center;
     text-decoration: none;
@@ -118,14 +110,24 @@ li {
   color: #990099;
 } 
 
-@media only screen and (max-width: 850px) {
+.bar {
+  display: block;
+  width: 28px;
+  height: 4px;
+  margin: 5px auto;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  background-color: #998100;
+}
+
+@media only screen and (max-width: 768px) {
   .nav-menu {
-      position: fixed;
+      position: absolute;
       right: -150%;
       top: 120px;
       padding: 0 0;
       flex-direction: column;
-      background-color: #193300;
+      background-color: #111;
       width: 40%;
       border-radius: 1px;
       text-align: center;
@@ -157,11 +159,11 @@ li {
 }
 
 .hamburger.active .bar:nth-child(1) {
-  transform: translateY(10px) rotate(45deg);
+  transform: translateY(9px) rotate(45deg);
 }
 
 .hamburger.active .bar:nth-child(3) {
-  transform: translateY(-10px) rotate(-45deg);
+  transform: translateY(-9px) rotate(-45deg);
 }
 
 main {
