--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 :root {
     --green: #65cc00;
-    --gold: #e5c100;
+    --gold: #ffd700;
     --black: #000000;
     --gray: #696969;
     --purple: #990099;
