--- a/main.css
+++ b/main.css
@@ -11,11 +11,12 @@
 
   * {
     font-family: helvetica;
+    box-sizing: border-box;
   }
   body { 
      color: var(--fontColor);
      background: var(--bg);
-     margin: 20px;
+     margin: 0;
   }
   body a {
     font-size: 18px;
@@ -64,17 +65,44 @@ li {
   .site-logo {
     margin-left: 0px;
     padding: 0px;
+    transition: height 0.4s;
+  }
+
+  img {
+    max-width: 100%;
+    height: 69px;
+    transition: height 0.4s;
+  }
+
+  .site-name {
+    font-size: x-large;
+    transition: height 0.4s;
   }
 
   .navbar {
     display: flex;
+    top: 0;
     justify-content: space-between;
     align-items: center;
     padding: 0rem 1.5rem;
+    background-color: transparent;
   }
 
-  .nav-background {
-    background-color: transparent;
+  .sticky {
+    position: fixed;
+    top: 0;
+    height: 40px;
+    width: 100%;
+    border-bottom: 1px solid #333;
+    background-color: #222;
+  }
+  
+    .sticky img {
+    height: 36px;
+  }
+    .sticky .nav-link {
+    height: 40px;
+    font-size: 15.5px;
   }
 
   .hamburger {
@@ -98,6 +126,7 @@ li {
     text-decoration: none;
     padding: 14px 16px;
     color: var(--navFontColor);
+    transition: all 0.4s;
 } 
   
 .nav-link:hover {
@@ -166,6 +195,7 @@ li {
   transform: translateY(-9px) rotate(-45deg);
 }
 
+
 main {
     line-height: 25px;
     margin: 0;
@@ -177,7 +207,7 @@ main {
 .section-1 {
   text-align: center;
   color: var(--darkgreen);
-  margin-left: 40px;
+  margin-left: 6%;
   width: 90%;
   padding: 5px;
   overflow: hidden;
@@ -186,7 +216,7 @@ main {
 article {
   font-size: large;
   color: var(--articleFontColor);
-  margin-left: 40px;
+  margin-left: 8%;
   width: 85%;
   padding: 1rem;
   border-top: 1px solid #7f7f7f3d;
@@ -199,7 +229,7 @@ article {
   font-family: sans-serif;
   font-size: large;
   color: var(--sect2Color);
-  margin-left: 40px;
+  margin-left: 8%;
   width: 85%;
   padding: 1rem;
   padding-right: 0rem;
