--- a/main.css
+++ b/main.css
@@ -91,14 +91,18 @@ li {
   .sticky {
     position: fixed;
     top: 0;
+    left: 0;
     height: 40px;
     width: 100%;
-    border-bottom: 1px solid #333;
+    border-bottom: 1px solid transparent;
     background-color: #222;
+    overflow: hidden;
+    z-index: 1;
   }
   
     .sticky img {
     height: 36px;
+    margin-top: 5px;
   }
     .sticky .nav-link {
     height: 40px;
@@ -195,20 +199,17 @@ li {
   transform: translateY(-9px) rotate(-45deg);
 }
 
-
 main {
+    margin: auto;
+    max-width: 1000px;
+    padding: 1rem;
     line-height: 25px;
-    margin: 0;
-    padding: 0rem;
-    padding-right: 4rem;
-    background-color: #7f7f7f1f;
+    background-color: transparent;
   }
 
 .section-1 {
   text-align: center;
   color: var(--darkgreen);
-  margin-left: 6%;
-  width: 90%;
   padding: 5px;
   overflow: hidden;
  }
@@ -216,8 +217,6 @@ main {
 article {
   font-size: large;
   color: var(--articleFontColor);
-  margin-left: 8%;
-  width: 85%;
   padding: 1rem;
   border-top: 1px solid #7f7f7f3d;
   border-bottom: 1px solid #7f7f7f3d;
@@ -229,8 +228,6 @@ article {
   font-family: sans-serif;
   font-size: large;
   color: var(--sect2Color);
-  margin-left: 8%;
-  width: 85%;
   padding: 1rem;
   padding-right: 0rem;
   left: 0px;
