--- a/main.css
+++ b/main.css
@@ -165,6 +165,7 @@ li {
       border-radius: 1px;
       text-align: center;
       transition: 0.3s;
+      z-index: 1;
       box-shadow:
           0 10px 27px rgba(0, 0, 0, 0.05);
   }
