--- a/main.css
+++ b/main.css
@@ -84,7 +84,7 @@ li {
     top: 0;
     justify-content: space-between;
     align-items: center;
-    padding: 0rem 1.5rem;
+    padding: 0 1rem 0rem 4.5rem;
     background-color: transparent;
   }
 
@@ -92,7 +92,7 @@ li {
     position: fixed;
     top: 0;
     left: 0;
-    height: 40px;
+    height: 48px;
     width: 100%;
     border-bottom: 1px solid transparent;
     background-color: #222;
@@ -101,12 +101,17 @@ li {
   }
   
     .sticky img {
-    height: 36px;
-    margin-top: 5px;
+    height: 33px;
+    margin-top: 0;
   }
     .sticky .nav-link {
     height: 40px;
     font-size: 15.5px;
+  }
+
+  .sticky .btn {
+    height: 29px;
+    margin-top: 15px;
   }
 
   .hamburger {
@@ -153,7 +158,7 @@ li {
   background-color: #998100;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 864px) {
   .nav-menu {
       position: fixed;
       right: -100%;
@@ -182,9 +187,15 @@ li {
   }
 
   .hamburger {
-      display: block;
-      cursor: pointer;
-  }
+    display: block;
+    cursor: pointer;
+    margin-top: 15px;
+    z-index: 2;
+}
+
+.site-logo{
+  margin-top: 15px;
+}
 
 }
 
@@ -201,11 +212,11 @@ li {
 }
 
 main {
-    margin: auto;
+    margin: 1rem auto;
     max-width: 1000px;
     padding: 1rem;
     line-height: 25px;
-    background-color: transparent;
+    background-color: #7f7f7f10;
   }
 
 .section-1 {
@@ -282,17 +293,20 @@ footer {
   
   .btn {
     font-family: sans-serif;
-    font-size: large;
+    font-size: medium;
     font-weight: bold;
     position: absolute;
-    margin: 18px 5px;
-    left: 1.4rem;
-    height: 60px;
-    width: 60px;
+    margin: 25px 5px;
+    top: 0;
+    left: 0;
+    height: 55px;
+    width: 55px;
     border-radius: 50%;
     border: 2px solid #4c9900;
     color: var(--btnFontColor);
     background-color: var(--btnBg);
+    z-index: 1;
+    transition: height 0.4s;
   }
 
   .btn:focus { 
