--- a/main.css
+++ b/main.css
@@ -144,9 +144,7 @@ li {
     text-decoration: underline;
 }
 
-.nav-link:visited {
-  color: #990099;
-} 
+.nav-link:visited
 
 .bar {
   display: block;
