--- a/main.css
+++ b/main.css
@@ -275,6 +275,7 @@ footer {
     --fontColor: var(--black);
     --btnBg: var(--green);
     --btnFontColor: var(--black);
+    --btnBorder: var(--gray);
     --navFontColor: var(--gold);
     --navAHoverColor: var(--green);
     --articleFontColor: var(--black);
@@ -287,6 +288,7 @@ footer {
     --fontColor: var(--green);
     --btnBg: var(--black);
     --btnFontColor: var(--gold);
+    --btnBorder: #4c9900;
     --navFontColor: var(--gray);
     --navAHoverColor: var(--gold);
     --articleFontColor: var(--purple);
@@ -312,7 +314,7 @@ footer {
     height: 55px;
     width: 55px;
     border-radius: 50%;
-    border: 2px solid #4c9900;
+    border: 2px solid var(--btnBorder);
     color: var(--btnFontColor);
     background-color: var(--btnBg);
     z-index: 1;
