--- a/main.css
+++ b/main.css
@@ -120,7 +120,7 @@ li {
    
   }
   .sticky .nav-link {
-    height: 40px;
+    height: 45px;
     font-size: 15.5px;
   }
 
@@ -172,8 +172,11 @@ li {
   .nav-menu {
       position: fixed;
       right: -100%;
-      top: 120px;
-      padding: 0 0;
+      top: 0;
+      bottom: 0;
+      padding: 69px 5px;
+      margin: 0;
+      display: block; 
       flex-direction: column;
       background-color: #111;
       width: 40%;
@@ -190,10 +193,11 @@ li {
   }
 
   .nav-item {
-     margin: 0px 0;
-     margin-top: 0px;
-     
-      
+    margin: 0 4px;   
+  }
+
+  .nav-link {
+    text-align: left;
   }
 
   .hamburger {
@@ -275,7 +279,7 @@ footer {
     --fontColor: var(--black);
     --btnBg: var(--green);
     --btnFontColor: var(--black);
-    --btnBorder: var(--gray);
+    --btnBorder: #665600;;
     --navFontColor: var(--gold);
     --navAHoverColor: var(--green);
     --articleFontColor: var(--black);
